--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ hs_err_pid*
 
 # Maven
 target/
+trivia-night/src/main/resources/application.properties
+
+trivia-night/src/test/resources/application.properties
